# osta

./: .coverage  .gitignore  .~lock.asd.csv#  .~lock.delete.csv#  .~lock.draft_remove.csv#  NEWS  README.md  TODO.txt  asd.csv  delete.csv  draft.py  draft2.py  file_path_0.csv.csv  pkg_info_for_dev.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.clg  todo.txt  tox.ini
.github/workflows/: static.yml  tests.yml
data/: .~lock.land_codes.csv#  .~lock.mandatory_fields.csv#  .~lock.optional_fields.csv#  get_account_info.py  get_financial_codes.py  get_land_codes.py  get_municipality_codes.py  get_service_codes.py  mandatory_fields.csv  optional_fields.csv
docs/: change_names.html  clean_data.html  enrich_data.html  index.html
docs/osta/: change_names.html  clean_data.html  index.html
docs/theme/: head.mako  logo.mako
html/osta/: change_names.html  clean_data.html  index.html  utils.html
html/ostan/: change_names.html  clean_data.html  index.html  setup.html
html/ostan/data/: get_land_codes.html  index.html
html/ostan/src/: index.html
html/ostan/src/osta/: change_names.html  index.html
html/ostan/tests/: index.html  test_change_names.html
src/osta/: __utils.py  change_names.py  clean_data.py  combine_data.py  enrich_data.py  fetch_data.py  utils.py
src/osta.egg-info/: PKG-INFO  SOURCES.txt
src/osta/resources/: .~lock.account_info.csv#  .~lock.field_pairs.csv#  .~lock.mandatory_fields.csv#  .~lock.optional_fields.csv#  .~lock.service_codes.csv#  account_info.csv  field_pairs.csv  financial_codes.csv  mandatory_fields.csv  municipality_bids.csv  municipality_codes.csv  optional_fields.csv  service_codes.csv
src/ostan/: .coverage  change_names.py  clean_data.py
src/ostan.egg-info/: PKG-INFO  SOURCES.txt
src/ostan/resources/: municipality_codes.csv
tests/: test_change_names.py  test_clean_data.py  test_enrich_data.py  test_utils.py
