[metadata]
name = ostan
description = OSTolaskujen ANalysointi -- package for analysing invoices of Finnish public organizations
version = 0.0.1
author = Tuomas Borman
license = Artistic License 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
install_requires =
    requests>=2
python_requires = >=3.9
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.packages.find]
where = src

[options.package_data]
ostan.resources =
    *

[flake8]
max-line-length = 160
