# This file contains configuration information for setuptools
# This is the main file. setup.py uses the information from This
# file.

# Information on the package. Windows, mac and linux supported.
[metadata]
name = osta
description = OSTolaskujen Analysointi -- package for analysing invoices of Finnish public organizations
version = 0.3.0
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/TuomasBorman/osta
author = Tuomas Borman
author_email = tvborm@utu.fi
license = Artistic License 2.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

# Package configuration options. Finds package automatically
# from src directory.
# The package contains resource data in osta/resource directory.
[options]
python_requires = >=3.8
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False
[options.packages.find]
where = src
[options.package_data]
osta.resources =
    *

# Option for flake8 that checks that the style of code is correct
[flake8]
max-line-length = 160
